--- a/SSE-Disc/SSE-Disc.ioc
+++ b/SSE-Disc/SSE-Disc.ioc
@@ -24,7 +24,7 @@ Mcu.IP7=TIM3
 Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PH1-OSC_OUT
+Mcu.Pin0=PC15-OSC32_OUT
 Mcu.Pin1=PA0-WKUP
 Mcu.Pin10=PC5
 Mcu.Pin11=PE8
@@ -93,6 +93,11 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=RELE
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC4.GPIO_Label=CE
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -123,10 +128,6 @@ PE9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PE9.GPIO_PuPd=GPIO_NOPULL
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE9.Signal=S_TIM1_CH1
-PH1-OSC_OUT.GPIOParameters=GPIO_Label
-PH1-OSC_OUT.GPIO_Label=RELE
-PH1-OSC_OUT.Locked=true
-PH1-OSC_OUT.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
